@@ -41,6 +41,20 @@ JHtml::_('behavior.modal');
 		}
 	}
 </script>
+<script type="text/javascript">
+	// Hide/show all rows which are not assigned.
+	window.addEvent('domready', function(){
+	//	$$('.adminlist tr.no').hide();
+		document.id('showmods').addEvent('click', function(e) {
+		//	e.preventDefault();
+			if ($$('.adminlist tr.no').getStyle('display')[0] == 'none') {
+				$$('.adminlist tr.no').show();
+			} else {
+				$$('.adminlist tr.no').hide();
+			}
+		});
+	});
+</script>
 
 <form action="<?php echo JRoute::_('index.php?option=com_menus&layout=edit&id='.(int) $this->item->id); ?>" method="post" name="adminForm" id="item-form" class="form-validate">
 
