@@ -8,6 +8,8 @@
 
 defined('_JEXEC') or die;
 ?>
+	<label style="margin-right: 5px;" for="showmods"><?php echo JText::_('COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED');?></label>
+	<input type="checkbox" id="showmods"></input>
 	<table class="adminlist">
 		<thead>
 		<tr>
@@ -21,12 +23,17 @@ defined('_JEXEC') or die;
 		</thead>
 		<tbody>
 		<?php foreach ($this->modules as $i => &$module) : ?>
+ 			<?php if (is_null($module->menuid)) : ?>
+				<?php if(!$module->except || $module->menuid < 0) : ?>
+					<tr class="no row<?php echo $i % 2;?>">
+				<?php else : ?>
 			<tr class="row<?php echo $i % 2;?>">
+				<?php endif; ?> 
+			<?php endif; ?>
 				<td>
 					<?php $link = 'index.php?option=com_modules&amp;client_id=0&amp;task=module.edit&amp;id='. $module->id.'&amp;tmpl=component&amp;view=module&amp;layout=modal' ; ?>
 					<a class="modal" href="<?php echo $link;?>" rel="{handler: 'iframe', size: {x: 900, y: 550}}" title="<?php echo JText::_('COM_MENUS_EDIT_MODULE_SETTINGS');?>">
 						<?php echo JText::sprintf('COM_MENUS_MODULE_ACCESS_POSITION', $this->escape($module->title), $this->escape($module->access_title), $this->escape($module->position)); ?></a>
-
 				</td>
 				<td class="center">
 					<?php if (is_null($module->menuid)) : ?>
