@@ -63,6 +63,7 @@ COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL=" Menu Location"
 COM_MENUS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- No association -"
 COM_MENUS_ITEM_FIELD_BROWSERNAV_DESC="Target browser window when the menu item is clicked."
 COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Target Window"
+COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED="Hide Unassigned Modules"
 COM_MENUS_ITEM_FIELD_HOME_DESC="Sets this menu item as the default or home page of the site. You must have a default page set at all times."
 COM_MENUS_ITEM_FIELD_HOME_LABEL="Default Page"
 COM_MENUS_ITEM_FIELD_LANGUAGE_DESC="Assign a language to this menu item"
