@@ -43,6 +43,20 @@ $canDo = MenusHelper::getActions();
 		}
 	}
 </script>
+<script type="text/javascript">
+	//Hide/show all rows which are not assigned.
+	window.addEvent('domready', function(){
+	//	$$('.adminlist tr.no').hide();
+		document.id('showmods').addEvent('click', function(e) {
+		//	e.preventDefault();
+			if ($$('.adminlist tr.no').getStyle('display')[0] == 'none') {
+				$$('.adminlist tr.no').show();
+			} else {
+				$$('.adminlist tr.no').hide();
+			}
+		});
+	});
+</script>
 
 <div class="menuitem-edit">
 
