@@ -28,7 +28,11 @@ $ -> Language fix or change
 
 11-May-2012 Jean-Marie Simonet
  # [#27711] Plugin SEF don't support "poster" video attribute. Thanks Ryan
- 
+ # [#28481] Edit Menu Item: Modules appears multiple times in the list. Thanks Doesnt Matter.
+ # [#28205] Remove 'Display: no' modules from Module Assignment list (1.7), or button to hide them. Thanks Jason Williams and Andrea. 
+ # [#28514] duplicate line in user.php. Thanks Viet Vu
+ # [#28421] Update PHPMailer to 5.2.1. Thanks Rouven.
+
 30-Apr-2012 Jean-Marie Simonet
  # Correcting hathor xml
  # [#28453] Language override doesn't handle double quotes properly. Thanks Johannes.
